@@ -1,3 +1,15 @@
+2015-03-05  Sandy Perez  <sperez@indaba.es>
+
+        Fix the build when NEON_INTRINSICS is enabled
+        https://bugs.webkit.org/show_bug.cgi?id=142361
+
+        Reviewed by Csaba Osztrogonác.
+
+        * platform/graphics/cpu/arm/filters/FEBlendNEON.h:
+        (WebCore::FEBlend::platformApplySoftware):
+        * platform/graphics/filters/FEGaussianBlur.cpp:
+        (WebCore::standardBoxBlur):
+
 2015-03-05  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [SOUP] Check TLS errors as soon as they are set in the SoupMessage
